Creados componentes Acerca de, Experiencia laboral y Educación

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
 <app-header></app-header>
+<app-acerca></app-acerca>
+<app-experiencia></app-experiencia>
+<app-educacion></app-educacion>
+
+<button class="btn btn-danger">prueba bootstrap</button>
