--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,13 @@
-<div>
-    <app-logo></app-logo>
-    <app-social></app-social>
-    <app-banner></app-banner>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col">
+            <app-logo></app-logo>
+        </div>
+        <div class="col text-end">
+            <app-social></app-social>
+        </div>
+    </div>
+    <div class="row">
+        <app-banner></app-banner>
+    </div>
 </div>
