--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,3 +1,3 @@
-<div>
-    <img src="../../../assets/banner.jpg" alt="">
+<div class="text-center">
+    <img src="../../../assets/banner.jpg" class="rounded img-fluid" alt="...">
 </div>
