--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,8 @@
 <app-acerca></app-acerca>
 <app-experiencia></app-experiencia>
 <app-educacion></app-educacion>
+<app-skills></app-skills>
+<app-proyectos></app-proyectos>
+<app-footer></app-footer>
 
 <button class="btn btn-danger">prueba bootstrap</button>
